# reguleque-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
reguleque_api/: config.py  main.py
reguleque_api/db/: __init__.py  database_manager.py  models.py  mongo_manager.py  rev_entry.json
reguleque_api/internal/: admin.py
reguleque_api/routers/: entries.py
